--- a/main.css
+++ b/main.css
@@ -1,7 +1,15 @@
 body {
-	background-color : #ddd;
+	background-color : #eee;
 }
 
 p {
-	text-align: center;
+	padding-top: 100px;
+    font-size: 24pt;
+    font-family: monospace;
+}
+
+.main {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
